--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -1,4 +1,9 @@
 /* 内容主体 */
+.gg-window
+.live-tabs
+.pgc-rank
+.rank-list
+.manga-rank
 .van-popper-channel .popper__arrow
 	display none !important
 
