--- a/bilibili-lite/src/manga/header.styl
+++ b/bilibili-lite/src/manga/header.styl
@@ -69,11 +69,11 @@
     transform translateY(0)
 
     .item-icon
-      width: 30px !important
+      width 30px !important
       height 30px !important
 
     .item-label
-      font-size: 0
+      font-size 0
 
   for n in 2 3 4
     &:nth-child({n})
