--- a/bilibili-lite/src/manga/index.styl
+++ b/bilibili-lite/src/manga/index.styl
@@ -3,6 +3,7 @@
   @import 'header'
 	@import 'home'
   @import 'info'
+  @import 'ranking'
 }
 @-moz-document url-prefix("https://manga.bilibili.com/detail/") {
   @import 'detail'
