--- a/bilibili-lite/src/member/header.styl
+++ b/bilibili-lite/src/member/header.styl
@@ -1,4 +1,5 @@
 /* 创作中心 导航 */
+.header .left-block .logo.bcc-icon-logo
 .header span.el-popover__reference
 .header-popover-avatar .logout .line
   display none !important
@@ -25,6 +26,7 @@
   box-shadow none !important
 
 .header .left-block .main-site
+  margin-left 0 !important
   font-size 0 !important
 
   .bcc-iconfont
