--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -43,6 +43,7 @@ a span:hover
 .is-vip:hover
 .nickname--red
 .vip-red-name
+.name.vip-red-name
 .bili-header-m .profile-m .big-vip-red
 .review-author.is-vip
 .username.is-vip
