--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -91,6 +91,7 @@ button
 .product-buy
 .promo-btn
 .confirm-paybtn.active
+.searchBtn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
