--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -36,10 +36,8 @@
 
 /* 左侧 */
 .nav-link
-	width 400px
-
 .nav-wrapper-left
-	width 300px
+	width 350px
 
 .nav-link .nav-link-ul
 .nav-wrapper-left .nav-con-ul
@@ -99,6 +97,8 @@
 .bili-header-m .nav-menu .nav-con .nav-item .i-frame
 .news-notice-panel
 .publish-panel
+.popover-channe
+.user-panel-ctnr .user-panel
 	border 1px solid var(--c-border) !important
 	border-top-width 0 !important
 
@@ -155,6 +155,13 @@
 .dynamic-m .dyn_list_wrapper .dyn_list li .r .title .uname
 	background-color transparent !important
 	color var(--c-title) !important
+
+.lang-change .lang-intro
+	width 180px
+
+.van-popper-avatar .level-intro
+	left -241px !important
+	border 1px solid var(--c-border)
 
 /* 消息弹窗 */
 .i-frame iframe
