--- a/bilibili-lite/src/show/base.styl
+++ b/bilibili-lite/src/show/base.styl
@@ -1,5 +1,6 @@
 /* 主体 */
 .footer
+.nav-header-wrapper .nav-header .nav-header-logo
 .toolbar-wrapper .service-wrapper
 .nav-header-wrapper .nav-header .nav-header-mainsite
 .nav-header-wrapper .nav-header .order-icon
@@ -102,6 +103,7 @@
   border 1px solid var(--c-border)
 
 .selector-wrapper
+.nav-header-wrapper
 .header
   border-bottom 1px solid var(--c-border)
 
@@ -125,6 +127,7 @@
 .confirmorder-container
 .confirmorder-container .confirm-bottom .confirm-paybtn.active
 .ticket-tips-wrapper .rec-item:hover
+.nav-header-wrapper
   box-shadow none !important
 
 .buyticket .product-buy
@@ -145,7 +148,7 @@
   float right
 
 .nav-header-wrapper .nav-header .nav-header-tv-icon
-  margin-left 20px !important
+  margin-left 0 !important
   width 30px !important
   height 30px !important
 
